bug fixes and gc update